<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_baseline_home_24_white"
        android:title="@string/menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_menu"
        android:title="@string/menu_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_website"
        android:title="@string/menu_website"
        app:showAsAction="never" />
    <!--
    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_baseline_info_24_white"
        android:title="@string/menu_info"
        app:showAsAction="never" />
    -->
</menu>