<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/mainActivity_btn_restaurant"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorPrimary"
                    android:drawableStart="@drawable/button_icon"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/mainActivity_btn_restaurant"
                    android:textColor="#F4F4F4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/mainActivity_menuText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainActivity_btn_terras" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:text="@string/mainActivity_welcomeText"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/mainActivity_btn_menu"
                    android:layout_width="87dp"
                    android:layout_height="0dp"
                    android:text="@string/mainActivity_btn_menu"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <Button
                    android:id="@+id/mainActivity_btn_taverne"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:drawableStart="@drawable/button_icon"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/mainActivity_btn_taverne"
                    android:textColor="#F4F4F4"
                    app:layout_constraintEnd_toEndOf="@+id/mainActivity_btn_restaurant"
                    app:layout_constraintStart_toStartOf="@+id/mainActivity_btn_restaurant"
                    app:layout_constraintTop_toBottomOf="@+id/mainActivity_btn_restaurant" />

                <Button
                    android:id="@+id/mainActivity_btn_terras"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:drawableStart="@drawable/button_icon"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/mainActivity_btn_terras"
                    android:textColor="#F4F4F4"
                    app:layout_constraintEnd_toEndOf="@+id/mainActivity_btn_restaurant"
                    app:layout_constraintStart_toStartOf="@+id/mainActivity_btn_restaurant"
                    app:layout_constraintTop_toBottomOf="@+id/mainActivity_btn_taverne" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>